--- a/public/index.html
+++ b/public/index.html
@@ -7,23 +7,16 @@
     <meta name="theme-color" content="#000000" />
     
     
-<<<<<<< HEAD
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-      <!-- In index.html -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 
     <title>React App</title>
-=======
-    <title>CryptX</title>
->>>>>>> caf18d7e47a7840b65edc454828061b678cc2b83
+    <script
+  async
+  crossorigin="anonymous"
+  data-clerk-publishable-key="pk_test_ZmFuY3ktc2t1bmstMTEuY2xlcmsuYWNjb3VudHMuZGV2JA"
+  src="https://fancy-skunk-11.clerk.accounts.dev/npm/@clerk/clerk-js@4/dist/clerk.browser.js"
+  type="text/javascript">
+</script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
